--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,7 +1,7 @@
-redis.host=127.0.0.1
+redis.host=106.12.37.42
 redis.port=6379
-redis.pass=123456
-  
+redis.pass=lixing
+
 redis.maxIdle=5
 redis.maxTotal=6000
 redis.maxWaitMillis=10000
