--- a/src/test/resources/redis.properties
+++ b/src/test/resources/redis.properties
@@ -1,6 +1,6 @@
-redis.host=10.200.11.153
+redis.host=106.12.37.42
 redis.port=6379
-redis.pass=123456
+redis.pass=lixing
   
 redis.maxIdle=5
 redis.maxTotal=6000
